# supportflow-multi-agent-router

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_queries.json
app/: streamlit_app.py
data/finance_docs/: Finance_Operations_Knowledge_Base.md
data/hr_docs/: HR_Operations_Knowledge_Base.md
data/legal_docs/: Legal_Operations_Knowledge_Base.md
data/tech_docs/: IT_Support_Knowledge_Base.md
src/agents/: base_rag_agent.py  evaluator.py  finance_agent.py  hr_agent.py  legal_agent.py  tech_agent.py  test_specialized_agents.py
src/config/: settings.py
src/graph/: graph_builder.py  router.py  state.py  test_evaluator_agent.py  test_graph.py  test_langfuse_observability.py
src/ingestion/: document_loader.py  ingest_documents.py  text_splitter.py
src/llm/: llm_factory.py  test_llm_factory.py
src/observability/: langfuse_client.py
src/retrieval/: retriever_factory.py  test_retriever.py  vectorstore.py
src/schemas/: evaluation.py  rag_response.py
