[project]
name = "supportflow-multi-agent-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-xai>=1.2.2",
    "langfuse>=4.14.0",
    "langgraph>=1.2.9",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
]
